tests/snapshots/test_runner__tests__compiler__typecheck__applicative_let_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Option<T> = Some(T) None

let map<A B>
  : | Option<A> | A => Option<B> => Option<B>
  = | Some(x) f => x.f
    | None _ => None

export let sum
  : | Option<Integer> Option<Integer> => Option<[Integer]>
  = | a b =>
      let/map x = a
      let/map y = b
      Some([x y])

do Some(1).sum(Some(2)).print
do None.sum(Some(2)).print
do Some(1).sum(None).print
do None.sum(None).print

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': 'Some', _: [ 1, 2 ] }
{ '$': 'None', _: null }
{ '$': 'None', _: null }
{ '$': 'None', _: null }

============
STDERR
============
