tests/snapshots/test_runner__tests__compiler__typecheck__applicative_let_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
# Expects no error
enum Option<T> = Some(T) None

let map<A B>
  : | Option<A> | A => Option<B> => Option<B>
  = | Some(x) f => x.f
    | None _ => None

export let foo
  : | Option<{bar: String}> => Option<String>
  = | a =>
      let/map x = a
      Some(x.bar)

do Some({bar: "hello world"}).foo.print
do None.foo.print

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': 'Some', _: 'hello world' }
{ '$': 'None', _: null }

============
STDERR
============
