tests/snapshots/test_runner__tests__compiler__typecheck__applicative_let_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let map
  : | Integer | Integer => Integer => [Integer]
  = | x f => [x.f]

do
  let/map 0 = 123
     # Error, non-exhaustive pattern
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/applicative_let_4.kk:6:11
  │
6 │   let/map 0 = 123
  │           ^ Non-exhaustive cases
  │
  = Missing case(s):

      | _ => ...
