tests/snapshots/test_runner__tests__compiler__typecheck__applicative_let_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let apply
  : | Integer | Integer Integer => Integer => Integer
  = | x f => x.f(x)

do
  let/apply x = 123
     # Error, non-exhaustive pattern
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/applicative_let_5.kk:6:13
  │
6 │   let/apply x = 123
  │             ^ Function arguments length mismatch
  │
  = Expected 2 arguments, but this function has 1 argument
