tests/snapshots/test_runner__tests__compiler__typecheck__cannot_call_constant_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let pi = 3.142

null.pi() // Error: pi is not a function

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/cannot_call_constant_1.kk:3:6
  │
3 │ null.pi() // Error: pi is not a function
  │      ^^ Cannot call a non-function
  │
  = The type of this expression is not function, so you cannot call it.
