tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_array_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do
  let foo =
    | [] => true
    | [_ ...[]] => false
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_array_1.kk:3:5
  │
3 │ ╭     | [] => true
4 │ │     | [_ ...[]] => false
  │ ╰────────────────────────^ Non-exhaustive cases
  │
  = Missing case(s):

      | [_ ...[_ ..._]] => ...
