tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_boolean_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let and =
  | true true => true
  | _ _ => false
  | _ _ => false

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_boolean_1.kk:4:5
  │
4 │   | _ _ => false
  │     ^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
