tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_boolean_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Boolean = #true | #false

let (x : Boolean) and (y: Boolean) : Boolean =
  {
    \(x = #true, y = #true) -> #true
    \(x = #false, y = #true) -> #false
  } (x, y)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_boolean_2.kk:5:6
  │
5 │       \(x = #true, y = #true) -> #true
  │ ╭──────^
6 │ │     \(x = #false, y = #true) -> #false
  │ ╰──────────────────────────────────────^ Non-exhaustive cases
  │
  = Missing case(s):

      (x = #true, y = #false)
      (x = #false, y = #false)
